--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.jpa.show-sql=true
 spring.datasource.url=jdbc:mysql://localhost:3306/spring_rest?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 
 # security - basic form
-spring.security.user.name=user
-spring.security.user.password=user
-spring.security.user.roles=USER
+#spring.security.user.name=user
+#spring.security.user.password=user
+#spring.security.user.roles=USER
 
