--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,10 @@ spring.datasource.url=jdbc:mysql://localhost:3306/spring_rest?useUnicode=true&us
 #spring.security.user.password=user
 #spring.security.user.roles=USER
 
+# Auto mailing konfiguracja
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=mailerspring2019@gmail.com
+spring.mail.password=123!@#qweQWE
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
