--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,11 @@
-spring.datasource.username=rest_user
-spring.datasource.password=123
+spring.datasource.username=dTENXTpVXK
+spring.datasource.password=QpjxsmXpFs
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.datasource.url=jdbc:mysql://localhost:3306/spring_rest?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://remotemysql.com:3306/dTENXTpVXK?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+
+#Initialize the database using data.sql script
+spring.datasource.initialization-mode=never
 
 # security - basic form
 #spring.security.user.name=user
@@ -16,3 +19,4 @@ spring.mail.username=mailerspring2019@gmail.com
 spring.mail.password=123!@#qweQWE
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
