changed time zone

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,8 @@ spring.datasource.username=dTENXTpVXK
 spring.datasource.password=QpjxsmXpFs
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.datasource.url=jdbc:mysql://remotemysql.com:3306/dTENXTpVXK?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+#spring.datasource.url=jdbc:mysql://remotemysql.com:3306/dTENXTpVXK?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://remotemysql.com:3306/dTENXTpVXK?serverTimezone=UTC
 
 #Initialize the database using data.sql script
 spring.datasource.initialization-mode=never
