added feature - searchg by category (plus basis for logging via gmail)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,14 @@ spring.mail.password=123!@#qweQWE
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
+# O AUTH2
+security.oauth2.client.clientId=949616697825-kspvf0pgfvqhl0km0q4ep7rm6h8lld54.apps.googleusercontent.com
+security.oauth2.client.clientSecret=knidG_IRPspRzbvtR6K3bQeB
+security.oauth2.client.accessTokenUri=https://www.googleapis.com/oauth2/v3/token
+security.oauth2.client.userAuthorizationUri=https://accounts.google.com/o/oauth2/auth
+security.oauth2.client.tokenName=oauth_token
+security.oauth2.client.authenticationScheme=query
+security.oauth2.client.clientAuthenticationScheme=form
+security.oauth2.client.scope=profile email
+security.oauth2.resource.userInfoUri=https://www.googleapis.com/userinfo/v2/me
+security.oauth2.resource.preferTokenInfo=false
